--- a/src/Components/Calendar/DatePicker/Unit/Date/style.scss
+++ b/src/Components/Calendar/DatePicker/Unit/Date/style.scss
@@ -268,7 +268,7 @@
 }
 
 .dateTemp_confirmBtn {
-    @include c_label_1();
+    @include c_body_3();
     padding: 6px 16px;
     box-sizing: content-box;
     border-radius: 6px;
