--- a/src/Components/CalendarMobile/style.scss
+++ b/src/Components/CalendarMobile/style.scss
@@ -87,7 +87,7 @@
     color: #4d4d4d;
     align-items: center;
     justify-content: flex-start;
-    .mobileCalendarInput_Active {
+    &.mobileCalendarInput_Active {
         border-color: #67cdd6;
     }
 }
